--- a/index.html
+++ b/index.html
@@ -30,27 +30,27 @@
     </div>
 
     <div class="faq">
-    <span class="title-point">What is Frontend Mentor, and how will it help me? <img class="resize" src="/assets/images/icon-plus.svg" alt=""></span>
+    <span class="title-point">What is Frontend Mentor, and how will it help me? <img class="resize" src="assets/images/icon-plus.svg" alt=""></span>
     <span  class="text">Frontend Mentor offers realistic coding challenges to help developers improve their 
     frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
     all levels and ideal for portfolio building.</span>
     </div>
 
     <div class="faq">
-    <span class="title-point">Is Frontend Mentor free? <img class="resize" src="/assets/images/icon-plus.svg" alt=""></span>
+    <span class="title-point">Is Frontend Mentor free? <img class="resize" src="assets/images/icon-plus.svg" alt=""></span>
     <span  class="text">Yes, Frontend Mentor offers both free and premium coding challenges, with the free 
       option providing access to a range of projects suitable for all skill levels.</span>
     </div> 
 
     <div class="faq">
-    <span class="title-point">Can I use Frontend Mentor projects in my portfolio? <img class="resize" src="/assets/images/icon-plus.svg" alt=""></span>
+    <span class="title-point">Can I use Frontend Mentor projects in my portfolio? <img class="resize" src="assets/images/icon-plus.svg" alt=""></span>
     <span class="text">Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
       way to showcase your skills to potential employers!</span>
     </div>
 
 
     <div class="faq">
-    <span class="title-point">How can I get help if I'm stuck on a Frontend Mentor challenge? <img class="resize" src="/assets/images/icon-plus.svg" alt=""></span>
+    <span class="title-point">How can I get help if I'm stuck on a Frontend Mentor challenge? <img class="resize" src="assets/images/icon-plus.svg" alt=""></span>
     <span  class="text">The best place to get help is inside Frontend Mentor's Discord community. There's a help 
       channel where you can ask questions and seek support from other community members.</span>
     </div>
