--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   
   <div class="faqs">
     <div class="faqTitle">
-    <span class="title"><img src="/assets/images/icon-star.svg" alt=""><span>FAQs</span></span>
+    <span class="title"><img src="assets/images/icon-star.svg" alt=""><span>FAQs</span></span>
     </div>
 
     <div class="faq">
